- implementação usecase finlizeJob - implementação summary dashboard
